Add centos-72 to kitchen converge in make

--- a/policyfile-test/Makefile
+++ b/policyfile-test/Makefile
@@ -1,3 +1,6 @@
+centos:
+	sh -x run.sh && (cd aar && kitchen converge -p centos-72)
+
 ubuntu:
 	sh -x run.sh && (cd aar && kitchen converge -p ubuntu-1404)
 
