--- a/use-opscode-chef-server/Makefile
+++ b/use-opscode-chef-server/Makefile
@@ -1,3 +1,15 @@
+ubuntu1:
+	# just to generate Vagrantfile:
+	sh -x run.sh && (cd aar/cookbooks/motd_rhel && kitchen converge -p ubuntu-1404)
+	find . -iname vagrantfile | grep \.kitchen | xargs -I{} cp -v {} ./aar/cookbooks/motd_rhel/
+	(cd ./aar/cookbooks/motd_rhel && \
+		kitchen destroy all && \
+		vagrant up)
+# vagrant ssh --command 'sudo chef-client -c /tmp/vagrant-chef/client.rb -o motd_rhel'
+# https://manage.chef.io/organizations/streambox/cookbooks
+	knife node run_list add myserver 'recipe[motd_rhel]'
+	cd ./aar/cookbooks/motd_rhel && vagrant provision
+
 ubuntu:
 	sh -x run.sh && (cd aar/cookbooks/motd_rhel && kitchen converge -p ubuntu-1404)
 
