--- a/use-opscode-chef-server/Makefile
+++ b/use-opscode-chef-server/Makefile
@@ -1,6 +1,6 @@
 ubuntu1:
 	# just to generate Vagrantfile:
-	sh -x run.sh && (cd aar/cookbooks/motd_rhel && kitchen converge -p ubuntu-1404)
+	./run.sh && (cd aar/cookbooks/motd_rhel && kitchen converge -p ubuntu-1404)
 	find . -iname vagrantfile | grep \.kitchen | xargs -I{} cp -v {} ./aar/cookbooks/motd_rhel/
 	(cd ./aar/cookbooks/motd_rhel && \
 		kitchen destroy all && \
@@ -9,23 +9,23 @@ ubuntu1:
 # https://manage.chef.io/organizations/streambox/cookbooks
 
 ubuntu:
-	sh -x run.sh && (cd aar/cookbooks/motd_rhel && kitchen converge -p ubuntu-1404)
+	./run.sh && (cd aar/cookbooks/motd_rhel && kitchen converge -p ubuntu-1404)
 
 fedora:
-	sh -x run.sh && (cd aar && kitchen converge -p fedora-23)
+	./run.sh && (cd aar && kitchen converge -p fedora-23)
 
 freebsd:
-	sh -x run.sh && (cd aar && kitchen converge -p freebsd-9)
+	./run.sh && (cd aar && kitchen converge -p freebsd-9)
 
 all:
-	sh -x run.sh && (cd aar && kitchen converge -p)
+	./run.sh && (cd aar && kitchen converge -p)
 
 clean:
 	rm -rf aar
 
 t: template
 template:
-	sh -x run.sh
+	./run.sh
 
 readme: README.md
 README.md: README.org
