Failing on ubuntu 16.04 so converge on 14.04 instead

--- a/manage-users/Makefile
+++ b/manage-users/Makefile
@@ -5,10 +5,10 @@ setup:
 	sh -x run.sh $(repo) $(cookbook)
 
 converge:
-	cd userstest/cookbooks/my_users && kitchen converge ubuntu
+	cd userstest/cookbooks/my_users && kitchen converge ubuntu-1404
 
 login:
-	cd userstest/cookbooks/my_users && kitchen login ubuntu
+	cd userstest/cookbooks/my_users && kitchen login ubuntu-1404
 
 clean:
 	rm -rf userstest
